smooth scroll on iphone menu, and fixed close video popup

--- a/src/app/layout/mobile-navigation/index.css
+++ b/src/app/layout/mobile-navigation/index.css
@@ -67,6 +67,7 @@
     flex-direction: column;
     align-items: center;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
 
     @media (min-width: 412px) {
       border: 1px solid black;
